@startuml

class Product {
    price: BigDecimal
    name: String
}

interface DiscountCalculator {
    +calculateDiscounts(products: List<Product>, totalDiscount: BigDecimal): List<BigDecimal>
}
class App {
    calculator: DiscountCalculator
    products: List<Product>
    totalDiscount: BigDecimal
    +readProductsAndDiscountFromInput(scanner: Scanner)
    +calculateAndPrintDiscounts()
}

class ProportionalCalculator

DiscountCalculator <|.. ProportionalCalculator
App -> DiscountCalculator
App *-- Product


@enduml